fixed time series spacing issue

--- a/time-series/index.css
+++ b/time-series/index.css
@@ -269,7 +269,6 @@ h2 {
 .map {
     margin-top: 2em;
     min-width: 700px;
-    min-height: 500px;
     width: 100%;
 }
 
